<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangle_color_f6f7f8_corner_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_15dp"
                android:layout_height="@dimen/dimen_15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_search" />

            <EditText
                android:id="@+id/et_key_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/str_search_hint"
                android:imeActionLabel="@string/search"
                android:imeOptions="actionSearch"
                android:paddingLeft="8dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingRight="10dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:singleLine="true"
                android:textColor="@color/primary_text_color"
                android:textColorHint="@color/color_b3"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="@dimen/primary_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:text="@string/str_cancel"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/primary_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
