<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_view_common_title" />

    <LinearLayout
        android:id="@+id/layout_become_video_maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_12dp"
        android:background="@drawable/bg_rectangle_color_e0bd94_gradient_corner_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_12dp">

        <TextView
            android:id="@+id/tv_mul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:lines="1"
            android:textColor="@color/color_c17a28"
            android:textSize="@dimen/second_text_size" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:lines="1"
            android:textColor="@color/color_c17a28"
            android:textSize="@dimen/second_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_orange_arrow_right" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/layout_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rectangle_color_f6f7f8_corner_5">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/img_video"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:riv_corner_radius="@dimen/dimen_5dp" />

                        <LinearLayout
                            android:id="@+id/layout_upload_video"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/dimen_8dp"
                            android:paddingTop="@dimen/dimen_3dp"
                            android:paddingEnd="@dimen/dimen_8dp"
                            android:paddingBottom="@dimen/dimen_3dp">

                            <ImageView
                                android:id="@+id/img_video_add"
                                android:layout_width="@dimen/dimen_10dp"
                                android:layout_height="@dimen/dimen_10dp"
                                android:scaleType="fitCenter"
                                android:src="@mipmap/ic_plus_black" />

                            <TextView
                                android:id="@+id/tv_upload_video"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dimen_3dp"
                                android:ellipsize="end"
                                android:includeFontPadding="false"
                                android:lines="1"
                                android:text="@string/str_upload_video"
                                android:textColor="@color/primary_text_color" />
                        </LinearLayout>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_upload_video_hint_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_3dp"
                        android:textColor="@color/third_text_color"
                        android:textSize="@dimen/third_text_size" />

                    <TextView
                        android:id="@+id/tv_upload_video_hint_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_3dp"
                        android:lineSpacingMultiplier="1.1"
                        android:textColor="@color/third_text_color"
                        android:textSize="@dimen/third_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/layout_cover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rectangle_color_f6f7f8_corner_5">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/img_cover"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:riv_corner_radius="@dimen/dimen_5dp" />

                        <LinearLayout
                            android:id="@+id/layout_add_cover"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/dimen_8dp"
                            android:paddingTop="@dimen/dimen_3dp"
                            android:paddingEnd="@dimen/dimen_8dp"
                            android:paddingBottom="@dimen/dimen_3dp">

                            <ImageView
                                android:id="@+id/img_img_add"
                                android:layout_width="@dimen/dimen_10dp"
                                android:layout_height="@dimen/dimen_10dp"
                                android:scaleType="fitCenter"
                                android:src="@mipmap/ic_plus_black" />

                            <TextView
                                android:id="@+id/tv_add_cover"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dimen_3dp"
                                android:ellipsize="end"
                                android:includeFontPadding="false"
                                android:lines="1"
                                android:text="@string/str_add_cover"
                                android:textColor="@color/primary_text_color" />
                        </LinearLayout>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_upload_cover_hint_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_3dp"
                        android:textColor="@color/third_text_color"
                        android:textSize="@dimen/third_text_size" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@color/color_f6f7f8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dimen_12dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_12dp"
                android:paddingBottom="@dimen/dimen_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_title"
                    android:textColor="@color/second_text_color"
                    android:textSize="@dimen/primary_text_size" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:background="@null"
                    android:hint="@string/str_title_hint"
                    android:maxLength="120"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/third_text_color"
                    android:textSize="@dimen/primary_text_size" />
            </LinearLayout>

            <View style="@style/gray_line" />

            <LinearLayout
                android:id="@+id/layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/dimen_12dp"
                    android:paddingTop="@dimen/dimen_15dp"
                    android:paddingEnd="@dimen/dimen_12dp"
                    android:paddingBottom="@dimen/dimen_15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_price"
                        android:textColor="@color/second_text_color"
                        android:textSize="@dimen/primary_text_size" />

                    <EditText
                        android:id="@+id/et_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_15dp"
                        android:background="@null"
                        android:inputType="number"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/third_text_color"
                        android:textSize="@dimen/primary_text_size" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_price_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:paddingStart="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_12dp"
                    android:paddingBottom="@dimen/dimen_15dp"
                    android:textColor="@color/second_text_color"
                    android:textSize="@dimen/third_text_size" />

                <View style="@style/gray_line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dimen_12dp"
                android:paddingTop="@dimen/dimen_15dp"
                android:paddingEnd="@dimen/dimen_12dp"
                android:paddingBottom="@dimen/dimen_15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_tag"
                    android:textColor="@color/second_text_color"
                    android:textSize="@dimen/primary_text_size" />

                <com.example.boluouitest2.comod.baselib.view.tag.TagFlowLayout
                    android:id="@+id/layout_tags"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_15dp"
                    android:layout_weight="1"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/third_text_color"
                    android:textSize="@dimen/primary_text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_gray_arrow_right" />
            </LinearLayout>

            <View style="@style/gray_line" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="@dimen/dimen_18dp"
            android:layout_height="@dimen/dimen_18dp"
            android:button="@drawable/yellow_checkbox_selector"
            android:checked="false" />

        <TextView
            android:id="@+id/tv_upload_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_3dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/second_text_color"
            android:textSize="@dimen/second_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_post_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_12dp"
        android:background="@drawable/bg_rectangle_color_fcd935_radius_5_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_15dp">

        <ImageView
            android:layout_width="@dimen/dimen_10dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_post" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/str_post"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/title_text_size" />
    </LinearLayout>
</LinearLayout>
